tests/baselines/reference/FunctionDeclaration4.errors.txt
FunctionDeclaration4.ts(2,10): error TS2389: Function implementation name must be 'foo'.


==== FunctionDeclaration4.ts (1 errors) ====
    function foo();
    function bar() { }
             ~~~
!!! error TS2389: Function implementation name must be 'foo'.